--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^8.15.8",
     "@types/lodash": "^4.14.200",
     "@types/three": "^0.157.2",
@@ -16,6 +17,7 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "rooks": "^7.14.1",
     "three": "^0.158.0"
   },
   "devDependencies": {
