--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-ga4": "^2.1.0",
     "rooks": "^7.14.1",
     "three": "^0.158.0"
   },
