--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
+    "reset-css": "^5.0.2",
     "rooks": "^7.14.1",
     "three": "^0.158.0"
   },
