--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@react-three/drei": "^9.88.7",
     "@react-three/fiber": "^8.15.8",
     "@types/lodash": "^4.14.200",
+    "@types/randomcolor": "^0.5.8",
     "@types/three": "^0.157.2",
     "lodash": "^4.17.21",
     "next": "14.0.0",
+    "randomcolor": "^0.6.2",
     "react": "^18",
     "react-dom": "^18",
     "react-ga4": "^2.1.0",
