--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@types/lodash": "^4.14.200",
     "@types/randomcolor": "^0.5.8",
     "@types/three": "^0.157.2",
+    "3oilerplate": "^0.2.55",
     "lodash": "^4.17.21",
     "next": "14.0.0",
     "randomcolor": "^0.6.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-feather": "^2.0.10",
     "react-ga4": "^2.1.0",
     "reset-css": "^5.0.2",
     "rooks": "^7.14.1",
